# flaskmotors

./: .gitignore  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-app.yml
Api/flaskmotors/ext/resources/: pessoa.py
ApiTeste/flaskmotors/ext/database/: database.py
dockerfile/: Dockerfile
flaskmotors/: Makefile  app.py  setup.py
flaskmotors/api/cli/: commands.py
flaskmotors/api/config/: config.py
flaskmotors/api/database/: database.py
flaskmotors/api/migrate/: migrate.py
flaskmotors/api/models/: pessoa.py
flaskmotors/api/resources/: pessoa.py
flaskmotors/api/routes/: routes.py
flaskmotors/api/schemas/: welcomesc.py
flaskmotors/ext/api/: api.py
flaskmotors/ext/cli/: commands.py
flaskmotors/ext/config/: config.py
flaskmotors/ext/migrate/: migrate.py
flaskmotors/ext/models/: pessoa.py
flaskmotors/ext/routes/: _old_routes.py  routes.py
flaskmotors/ext/schemas/: pessoa.py
flaskmotors/tests/: test_flaskmotors.py
tests/: conftest.py  test_flaskmotors.py
