[tool.poetry]
name = "flaskmotors"
version = "0.1.0"
description = ""
authors = ["Diego Schmitz <diego@dschmitz.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-RESTful = "^0.3.9"
flasgger = "^0.9.5"
flask-marshmallow = "^0.14.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "latest"
black = "^22.6.0"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"
isort = "^5.10.1"
pytest-flask = "^1.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
